--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,4 +1,3 @@
-
 body {
     margin: auto;
     text-align: center;
@@ -10,8 +9,8 @@ svg {
     display: block;
     margin: auto;
     background-color: black;
-    width: 920px;
-    height: 600px;
+    width: 1200px; /* Adjust this to change the width */
+    height: 800px; /* Adjust this to change the height */
 }
 
 #city-name {
@@ -20,5 +19,5 @@ svg {
 
 #info {
     margin: 30px;
-    height: 700px;
+    height: 900px; /* Adjust this to change the height of the info container */
 }
